# pyhail

./: .gitignore  LICENSE  README.md  description.txt  dp_libs.py  files.txt  hdr.py  hsda.py  hsda_libs.py  hsda_mf.py  inspection_plot.ipynb  mesh.py  pipeline.ipynb  pyproject.toml  setup.py  test_environment.yml
.github/workflows/: tests.yml
.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md  setup-checkpoint.py
notebooks/: c_band_mesh_correction.ipynb  compare_mesh.ipynb  compare_mesh_fits.ipynb  example-Copy1.ipynb  example.ipynb  example_piepline.ipynb  example_pipeline.ipynb  find_column_maximum.py  gen_nci_qsub.ipynb  generate_hail_grids.ipynb  hybrid_mesh_blend.ipynb  inspection_plot.ipynb  mesh_ppi_optimised.py  min_range_from_altitude.ipynb  pipeline.ipynb  pipeline_multiproc.ipynb  pyhail_multiproc.py  testing.ipynb  testing_pyart.ipynb  testing_pyodim.ipynb  testing_pyodim_optimisation.ipynb
notebooks/other/: build_sounding_data.ipynb  generate_hail_grids-extra.ipynb
pyhail/: __init__.py  common.py  dp_libs.py  hacc.py  hdr.py  hsda.py  hsda_mf.py  hsda_q.py  lash.py  mesh.py  mesh_grid.py  mesh_ppi.py  working_bb.ipynb
src/pyhail/: __version__.py  common.py  hacc.py  hdr.py  hsda.py  hsda_mf.py  mesh_formulas.py  mesh_grid.py  mesh_ppi.py  mesh_ppi_new.py  ppi_column_maximum.py  pyodim.py  testing_pyart.ipynb  testing_pyodim.ipynb
tests/: test_column_max_main.py  test_common.py  test_hacc_main.py  test_hdr_main.py  test_hsda_core.py  test_hsda_main.py  test_hsda_mf.py  test_mesh_formulas.py  test_mesh_grid_main.py  test_mesh_ppi_main.py
