[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhail"
version = "2.4"
authors = [
  { name="Joshua Soderholm", email="joshua.soderholm@bom.gov.au" },
]
description = "Python hail retreivals"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["radar", "weather", "meteorology", "calibration"]
dependencies=["arm_pyart", "numpy", "netCDF4", "scipy", "numba"]

[project.urls]
"Homepage" = "https://github.com/joshua-wx/pyhail"
"Bug Tracker" = "https://github.com/joshua-wx/pyhail/issues"
