[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhail"
version = "3.1.0"
authors = [
  { name="Joshua Soderholm", email="joshua.soderholm@bom.gov.au" },
]
description = "Python hail retreivals"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["radar", "weather", "meteorology", "calibration"]
dependencies=["numpy", "scipy", "numba"]

[project.urls]
"Homepage" = "https://github.com/joshua-wx/pyhail"
"Bug Tracker" = "https://github.com/joshua-wx/pyhail/issues"
